2023-02-08  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.19.1
	* NEWS.md: Update for Ensmallen release 2.19.1
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.19.1
	* inst/include/ensmallen.hpp: ditto

2022-04-11  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.19.0
	* NEWS.md: Update for Ensmallen release 2.19.0
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.19.0
	* inst/include/ensmallen.hpp: ditto

2022-02-18  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION: Update URLs
	* NEWS.md: ditto
	* README.md: ditto

2022-02-18  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.18.2
	* NEWS.md: Update for Ensmallen release 2.18.2
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.18.2
	* inst/include/ensmallen.hpp: ditto

2021-11-20  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.18.1
	* NEWS.md: Update for Ensmallen release 2.18.1
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.18.1
	* inst/include/ensmallen.hpp: ditto

2021-10-22  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.18.0 and increase RcppArmadillo requirement
	* NEWS.md: Update for Ensmallen release 2.18.0
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.18.0
	* inst/include/ensmallen.hpp: ditto
	* src/RcppExports.cpp: Re-generate RcppExport
	* vignettes/using-rcppensmallen.Rmd: Clean up notation and bump linking note.
	* .github/workflows/r-cmd-check.yaml: Updated github actions runner for R CMD check

2021-07-24  James Balamuta  <balamut2@illinois.edu>

	* .github/workflows/pkgdown.yaml: Add github actions runner for pkgdown
	* _pkgdown.yml: Add pkgdown configuration
	* .Rbuildignore: ditto
	* .gitignore: ditto

2021-07-06  James Balamuta  <balamut2@illinois.edu>

	* DESCRIPTION (Version): Release 2.17.0
	* NEWS.md: Update for Ensmallen release 2.17.0
	* inst/include/ensmallen_bits: Upgraded to Ensmallen 2.17.0